# chesshacks

./: .gitignore  .gitmodules  BUILD_PYTHON.md  CMakeLists.txt  CMakeLists_cuda.txt  CUDA_IMPLEMENTATION.md  CUDA_KERNELS_SUMMARY.md  CUDA_README.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  NNUE_FIXES.md  NNUE_USAGE.md  README.md  build.sh  build_python.py  cmake_install.cmake  conftest.py  cuda_benchmark_results.txt  demo_nnue.py  diagnose_nnue.py  requirements.txt  run_tests.sh  serve.py  setup.py  setup_dependencies.sh  test_new_cpp_features.py  test_nnue.py  test_stockfish_comparison.py
benchmarks/: benchmark_bitmap.py  benchmark_bitmap_features.py  benchmark_cpp_eval.py  benchmark_cpp_functions.py  benchmark_cuda.py  benchmark_cuda_kernels.py  benchmark_improvements.py  benchmark_multithreading.py  benchmark_nnue_pipeline.py  benchmark_performance_profile.py  benchmark_profile_multithreading.py  benchmark_profile_threads.py  benchmark_search_profile.py  benchmark_search_threads.py  conftest.py  profile_multithreading.py  test_improvements.py
include/bitboard/: bitboard_state.h
include/core/: evaluation.h  functions.h  move_ordering.h  nnue_evaluator.h  search.h  search_internal.h  transposition_table.h  utils.h
include/cuda/: cuda_eval.h
lib/bitboard/: bitboard_state.cpp
lib/core/: bindings.cpp  evaluation.cpp  move_ordering.cpp  nnue_evaluator.cpp  search_alpha_beta.cpp  search_best_move.cpp  search_common.cpp  search_pgn.cpp  transposition_table.cpp
lib/cuda/: CMakeLists.txt  cuda_eval.cu  cuda_utils.cpp
scripts/: fetch_libtorch.sh
src/: bindings.cpp  chess_board.cpp  chess_board.h  cuda_check.py  cuda_utils.cpp  engine.py  env_manager.py  evaluation.cpp  evaluation.h  functions.cpp  functions.h  main.py  move_ordering.cpp  move_ordering.h  native_loader.py  nnue_evaluator.cpp  nnue_evaluator.h  opening_book.cpp  opening_book.h  search.h  search_and_utils.cpp  transposition_table.cpp  transposition_table.h  utils.h  virgo.h  virgo_instantiations.cpp
src/bitboard/: bitboard_state.cpp  bitboard_state.h
src/cuda/: cuda_eval.cu  cuda_eval.h  cuda_utils.cpp  cuda_utils.h
src/utils/: decorator.py
tests/: CMakeLists.txt  comprehensive_engine_test.py  conftest.py  core_search_functionality.py  demo_all_features.py  killer_history_null_move.py  late_move_reductions_aspiration.py  opening_book_multipv_tablebase.py  performance_profile.py  principal_variation_piece_squares.py  razoring_futility_see.py  singular_counter_continuation.py  test_advanced_features.py  test_all_features.py  test_bitboard_regressions.py  test_comprehensive_engine_test.py  test_core_search_functionality.py  test_cuda.py  test_cuda_detection.py  test_cuda_kernels.py  test_debug.py  test_demo_all_features.py  test_killer_history_null_move.py  test_late_move_reductions_aspiration.py  test_main.py  test_move_retrieval.py  test_new_features.py  test_nnue.py  test_opening_book_multipv_tablebase.py  test_parallel_optimizations.py  test_pgn_to_fen.py  test_pgn_to_fen_pytest.py  test_principal_variation_piece_squares.py  test_pruning.py  test_pvs_pst.py  test_razoring_futility_see.py  test_simple.py  test_singular_counter_continuation.py
tests/cpp/: cuda_tests.cpp  nnue_tests.cpp  pgn_tests.cpp  search_eval_tests.cpp
tests/features/: __init__.py  conftest.py  test_cuda.py  test_engine_wrappers.py  test_host_integration.py  test_nnue.py  test_python_c_bridge.py  test_search.py  test_state_conversion.py
tests/scripts/: generate_dummy_nnue.py
tests/train/: test_bitmap.py  test_train_module.py  test_training_pipeline.py  test_virgo_style.py
train/: __init__.py  config.py  dataset.py  download_config.json  download_data.py  model.py  train.py  train_dense_backup.py  upload_to_hf.py
train/cnn_model/: .gitignore  __init__.py  model.py  train.py
train/nnue_model/: CHECKPOINT_GUIDE.md  CONVERSION_SUMMARY.md  QUICK_REFERENCE.md  READY_TO_TRAIN.md  VIRGO_STYLE.md  __init__.py  benchmark_bitmap.py  export_model.py  export_torchscript.py  model.py  test_bitmap.py  test_training_pipeline.py  test_virgo_style.py  train.py
